--- a/batch1/WMAP.ini
+++ b/batch1/WMAP.ini
@@ -1,7 +1,7 @@
 cmb_numdatasets = 1
 cmb_dataset1 = WMAP
 
-cmb_dataset_SZ1 = data/WMAP_SZ_VBand.dat
+cmb_dataset_SZ1 = data/wmap_sz_spectrum_61GHz_v5.txt
 cmb_dataset_SZ_scale1 = 1
 
 param[asz]= 1 0 2 0.4 0.4
