fix setting likelihood theory dependencies

--- a/source/Makefile
+++ b/source/Makefile
@@ -12,7 +12,7 @@ RECOMBINATION ?=recfast
 PRECISION ?=
 
 #set WMAP empty not to compile with WMAP, e.g. WMAP = /scratch/../WMAP9/likelihood_v5
-WMAP ?= 
+WMAP ?=
 
 #Only needed for WMAP
 cfitsio ?= /usr/local/cfitsio/intel10/64/3.040
@@ -194,17 +194,17 @@ samples.o: ObjectLists.o settings.o
 likelihood.o: ObjectLists.o settings.o ParamNames.o
 DataLikelihoods.o: likelihood.o paramdef.o $(DATAMODULES)
 cliklike_CamSpec.o: temp_like.o
-$(PLANCKLIKE).o: cmbtypes.o likelihood.o
+$(PLANCKLIKE).o: cmbtypes.o
 settings.o: ../camb/libcamb_$(RECOMBINATION).a
-cmbtypes.o: settings.o
-Planck_like.o: likelihood.o cmbtypes.o
-cmbdata.o: Planck_like.o 
+cmbtypes.o: settings.o likelihood.o
+Planck_like.o: cmbtypes.o
+cmbdata.o: Planck_like.o
 bbn.o: settings.o likelihood.o
-mpk.o: cmbtypes.o lrggettheory.o likelihood.o
-bao.o: cmbtypes.o mpk.o likelihood.o
-HST.o: cmbtypes.o likelihood.o
-supernovae.o: cmbtypes.o likelihood.o
-SDSSLy-a-v3.o: cmbtypes.o likelihood.o
+mpk.o: cmbtypes.o lrggettheory.o
+bao.o: cmbtypes.o mpk.o
+HST.o: cmbtypes.o
+supernovae.o: cmbtypes.o
+SDSSLy-a-v3.o: cmbtypes.o
 $(CLSFILE): cmbtypes.o IO.o
 paramdef.o: $(CLSFILE) propose.o samples.o
 $(PROPOSE): settings.o
