fix and getdist plot_params can now specify unused parameters

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -89,9 +89,8 @@ triangle_params = omegabh2 omegach2 tau omegak mnu nnu yhe Alens ns nrun logA r 
 #e.g. colormap('jet')
 matlab_colscheme =
 
-#Parameters to use. If zero use all parameters which have lables.
-plotparams_num = 0
-plotparams = omegabh2 omegadmh2 tau ns
+#Parameters to use. If unspecified use all parameters which have labels.
+#plot_params = omegabh2 omegadmh2 tau ns
 
 #marker[x] adds vertical line to MatLab 1D plot
 marker[nrun] = 0
