--- a/distparams.ini
+++ b/distparams.ini
@@ -97,9 +97,8 @@ triangle_plot = T
 #e.g. colormap('jet')
 matlab_colscheme =
 
-#Parameters to use. If zero use all parameters which have lables.
-plotparams_num = 0
-plotparams = omegabh2 omegadmh2 tau ns
+#Parameters to use. If not specified use all parameters which have lables.
+#plot_params = omegabh2 omegadmh2 tau ns
 
 #Get set label to empty to not include a parameter in the parameter_names file
 #lab[asz]=
