--- a/batch1/params_CMB_defaults.ini
+++ b/batch1/params_CMB_defaults.ini
@@ -36,6 +36,8 @@ param[ns] = 0.96 0.9 1.1 0.004 0.004
 #log[10^10 A_s]
 param[logA] = 3.1 2.7 4 0.001 0.001
 
+param[Aphiphi] = 1 1 1 0 0
+
 #file used by CAMB
 highL_unlensed_cl_template = ./camb/HighLExtrapTemplate_lenspotentialCls.dat
 
