--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -25,6 +25,7 @@ param[acib217]= 55.5 0 80 3 3
 param[asz143]= 2.15 0 3 .6 0.6
 param[psr]= 0.91 0.0 1.0 0.04 0.04
 param[cibr]= 0.63 0.0 1.0 0.2 0.2
+param[ncib] = 0.6 0.5 1 0.05 0.05
 param[cal0]= 1 0.98 1.02  0.0004 0.0004
 param[cal1]= 1.0 1.0 1.0 0 0
 param[cal2]= 1 0.95 1.05 0.001 0.001
