rescale SZ parameters by asz143:aksz 4.796:2.05697, some cahnges to priors

--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -20,17 +20,17 @@ propose_matrix = planck_CAMspec_merged.covmat
 param[aps100] = 153 0 360 27 27
 param[aps143]= 54.9 0 270 4.5 4.5
 param[aps217]= 55.8 0 450 7.2 7.2
-param[acib143]= 10 0 20 3 3
+param[acib143]= 4 0 20 3 3
 param[acib217]= 55.5 0 80 3 3 
-param[asz143]= 2.15 0 3 .6 0.6
+param[asz143]= 4 0 10 1 1
 param[psr]= 0.91 0.0 1.0 0.04 0.04
 param[cibr]= 0.63 0.0 1.0 0.2 0.2
 param[ncib] = 0.6 0.5 1 0.05 0.05
 param[cal0]= 1 0.98 1.02  0.0004 0.0004
 param[cal1]= 1.0 1.0 1.0 0 0
 param[cal2]= 1 0.95 1.05 0.001 0.001
-param[xi] = .2 0 1 .2 .2
-param[aksz] = 1.5 0 5 .7 0.7
+param[xi] = 0.1 0 1 .2 .2
+param[aksz] = 1 0 10 .7 0.7
 
 param[bm_1_1] = 0.3 -5 5 0.2 0.2
 
