--- a/batch1/CAMspec_ACTSPT_defaults.ini
+++ b/batch1/CAMspec_ACTSPT_defaults.ini
@@ -14,16 +14,7 @@ lmax_computed_cl = 4500
 propose_matrix = planck_CAMspec_highL_merged.covmat
 
 DEFAULT(CAMspec_defaults.ini)
-
-#CAMspec nuisance parameters
-#Steven&Antony, updated with Erminia's prior ranges for common CAMspec and ACT/SPT nuisance paramters
-param[acib217]= 60 0 100 5 5
-param[aksz] = 1 0 10 .5 .5
-
-param[acib143]= 3.4 0 20 0.7 0.7
-param[asz143]= 0.9 0 3 .3 0.3
-param[cibr]= 0.95 0.0 1.0 0.04 0.04
-param[xi] = .1 0 1 .1 .1
+#CAMspec nuisance parameters now use same priors from above
 
 #ACT/SPT nuisance parameters
 #If combined with CAMspec or PLik, fix the common nuisance parameters here and set them above instead
