cliklike_CamSpec fix for odd compilation bugs; limit convergence checks now in terms of parameter names not numbers

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -114,6 +114,7 @@ limits[cibr]= 0 1
 limits[xi] = 0 1
 limits[aksz] =  0 5
 limits[psr]= N 1
+limits[ncib] = 0.5 1
 #highL
 limits[r_ps_spt_95x150]= N 1
 limits[r_ps_150x220]=N 1
