--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -1,5 +1,5 @@
 #clik likelihood file, when compiling with cliklike
-clik_data_camspec = %DATASETDIR%clik/CAMspec_v6.2TNdust_newbeam.clik
+clik_data_camspec = %DATASETDIR%clik/CAMspec_v6.2TN_2013_01_18.clik
 clik_params_camspec = %DATASETDIR%camspec.paramnames
 clik_speed_camspec = 5
 
@@ -25,7 +25,7 @@ param[acib217]= 55.5 0 80 3 3
 param[asz143]= 4 0 10 1 1
 param[psr]= 0.91 0.0 1.0 0.04 0.04
 param[cibr]= 0.63 0.0 1.0 0.2 0.2
-param[ncib] = 0.6 0.5 1 0.05 0.05
+param[ncib] = 0.6 -2 2 0.05 0.05
 param[cal0]= 1 0.98 1.02  0.0004 0.0004
 param[cal1]= 1.0 1.0 1.0 0 0
 param[cal2]= 1 0.95 1.05 0.001 0.001
