--- a/batch1/lensing.ini
+++ b/batch1/lensing.ini
@@ -1,5 +1,5 @@
 
-clik_data_lensing = %DATASETDIR%clik/lensing_likelihood_v1.1.clik_lensing
+clik_data_lensing = %DATASETDIR%clik/lensing_likelihood_v2.clik_lensing
 clik_speed_lensing = -1
 
 use_nonlinear_lensing = T
