fix nonlinear lensing(?)

--- a/source/Makefile
+++ b/source/Makefile
@@ -79,6 +79,7 @@ endif
 WMAP = /scratch/aml1005/wmap_likelihood_v5
 cfitsio = /usr/local/Cluster-Apps/cfitsio/intel/3.300
 FFLAGS = -mkl -openmp -O3 -xHost -no-prec-div -fpp -DMPI
+#FFLAGS = -mkl -openmp -g -check all -traceback -no-prec-div -fpp -DMPI
 endif
 
 
@@ -210,7 +211,7 @@ SDSSLy-a-v3.o: cmbtypes.o
 $(CLSFILE): cmbtypes.o IO.o
 paramdef.o: $(CLSFILE) propose.o samples.o
 $(PROPOSE): settings.o
-$(PARAMETERIZATION): paramdef.o 
+$(PARAMETERIZATION): paramdef.o
 calclike.o: DataLikelihoods.o
 postprocess.o: calclike.o
 MCMC.o: calclike.o
