neutrino model via degeneracy parameters

--- a/batch1/params_CMB_defaults.ini
+++ b/batch1/params_CMB_defaults.ini
@@ -17,6 +17,7 @@ param[tau] = 0.09 0.01 0.8 0.01 0.01
 
 num_massive_neutrinos=1
 param[mnu] = 0.06 0.06 0.06 0 0
+param[omegansh2] = 0 0 0 0 0
 
 param[omegak] = 0 0 0 0 0
 param[w] = -1 -1 -1 0 0 
