update grid etc

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -105,6 +105,9 @@ limits[r10]= 0 N
 limits[mnu]= 0 N
 limits[fdm]= 0 N
 limits[deltazrei]=0.5 2.5
+limits[meffsterile]= 0 N
+limits[omeganuh2]= 0 N
+
 
 #camspec
 limits[asz143]=0 10
