.light clik files

--- a/batch1/lowLike.ini
+++ b/batch1/lowLike.ini
@@ -1,2 +1,2 @@
-clik_data_lowlike = %DATASETDIR%clik/lowlike_v22.clik
+clik_data_lowlike = %DATASETDIR%clik/lowlike_v22.light.clik
 clik_speed_lowlike = -1
