python/runningJobs.py

--- a/batch1/CAMspec_ACTSPT_defaults.ini
+++ b/batch1/CAMspec_ACTSPT_defaults.ini
@@ -16,6 +16,8 @@ propose_matrix = planck_CAMspec_highL_merged.covmat
 DEFAULT(CAMspec_defaults.ini)
 #CAMspec nuisance parameters now use same priors from above
 
+param[cibr]= 0.95 0.0 1.0 0.04 0.04
+
 #ACT/SPT nuisance parameters
 #If combined with CAMspec or PLik, fix the common nuisance parameters here and set them above instead
 param[a_ps_act_148] = 10 0 30 0.6 0.6
