improved getdist 2D sample plots using elliptical smoothing kernel, adaptive grid output and new input parameter smooth_scale_2D for smoothing scale relative to the bin side

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -17,6 +17,7 @@ exclude_chain =
 #this parameter. Narrow diagonal distributions need larger number
 #Can also check plots by comparing with setting smoothing=F below
 num_bins = 40
+smooth_scale_2D =2
 
 #For disgarding burn-in if using raw chains
 #if < 1 interpreted as a fraction of the total number of rows (0.3 ignores first 30% of lines)
@@ -42,9 +43,8 @@ auto_label = F
 #samples_are_chains = F can be useful for other samples when first two columns not present
 samples_are_chains = T
 
-
-plot_meanlikes = T
-shade_meanlikes = T
+plot_meanlikes = F
+shade_meanlikes = F
 
 # if non-zero, output _thin file, thinned by thin_factor
 thin_factor = 0
