fix 2D limits issue; auto relax limit when posterior is a long way from it;

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -98,6 +98,7 @@ marker[nrun] = 0
 #Need to give limits if prior cuts off distribution where not very small
 #limits[tau] = 0.01 N
 #limits[w] = -1 N
+limits[w]=-3 -0.3
 limits[wa] = -2 2
 limits[r]= 0 N
 limits[asz] = 0 2
@@ -108,7 +109,7 @@ limits[fdm]= 0 N
 limits[deltazrei]=0.5 2.5
 limits[meffsterile]= 0 N
 limits[omeganuh2]= 0 N
-
+limits[H0]=40 100
 
 #camspec
 limits[asz143]=0 10
