--- a/batch1/all_likelihoods_fixed.ini
+++ b/batch1/all_likelihoods_fixed.ini
@@ -12,6 +12,7 @@ param[acib217] = 60 0 120 0 0
 param[asz143] = 2 0 5 0 0
 param[psr] = 0.9 0.0 1.0 0 0
 param[cibr] = 0.5 0.0 1.0 0 0
+param[ncib] = 0.6 -2 2 0 0
 param[cal0] = 1.013 0.98 1.02 0 0
 param[cal1] = 1.0 1.0 1.0 0 0
 param[cal2] = 1.004 0.98 1.02 0 0
@@ -39,17 +40,8 @@ param[bm_4_3] = 0 0 0 0 0
 param[bm_4_4] = 0 0 0 0 0
 param[bm_4_5] = 0 0 0 0 0
 
-#PLik nuisance parameters
-param[ps_pwfe_A_100_100] = 0.0001 0 0.0002 0 0
-param[ps_pwfe_A_100_143] = 0.0001 0 0.0002 0 0
-param[ps_pwfe_A_100_217] = 0.0001 0 0.0002 0 0
-param[ps_pwfe_A_143_143] = 0.0001 0 0.0002 0 0
-param[ps_pwfe_A_143_217] = 0.0001 0 0.0002 0 0
-param[ps_pwfe_A_217_217] = 0.0001 0 0.0002 0 0
-param[gal_norm] = 0.0001 0 0.0002 0 0
 
 #ACT/SPT nuisance parameters
-#If combined with CAMspec or PLik, fix the common nuisance parameters here and set them above instead
 param[a_ps_act_148] = 1 0 3 0 0
 param[a_ps_act_217] = 9 0 20 0 0
 param[a_ps_spt_95] = 1 0 3 0 0
