--- a/batch1/likelihood_batch1.ini
+++ b/batch1/likelihood_batch1.ini
@@ -10,9 +10,9 @@ use_lya = F
 use_clusters = F
 use_min_zre = 0
 
-
-INCLUDE(CAMspec_ACTSPT_defaults.ini)
-#INCLUDE(PLik_ACTSPT_defaults.ini)
+DEFAULT(all_likelihoods_fixed.ini)
+#INCLUDE(CAMspec_ACTSPT_defaults.ini)
+INCLUDE(CAMspec_defaults.ini)
 
 #filenames for CMB datasets and SZ templates (added to C_l times parameter(13))
 #Note you may need to change lmax in cmbtypes.f90 to use small scales (e.g. lmax=2100)
