--- a/batch1/multinest.ini
+++ b/batch1/multinest.ini
@@ -3,23 +3,23 @@
 ##################################################
 
 #multiple modes expected?
-multimodal = T
+multimodal = F
 
 #run in constant efficiency mode?
 ceff = F
 
 #max no. of mdoes expected (for memory allocation)
-maxmodes = 40
+maxmodes = 10
 
 #max no. of live points
-nlive = 2000
+nlive = 300
 
 #evidence tolerance factor, defines the stopping condition
-tol = 0.3
+tol = 0.5
 
 #sampling efficiency
-eff = 0.3
+eff = 0.8
 
 #no. of iterations after which to update on the sampling progress
-updInt = 100
+updInt = 2
 
