--- a/batch1/CAMspec_ACTSPT_defaults.ini
+++ b/batch1/CAMspec_ACTSPT_defaults.ini
@@ -1,8 +1,8 @@
 #clik likelihood file, when compiling with cliklike
 clik_numdatasets = 4
-clik_likefile1 = /home/hamann/plonk/clik/data/CAMspec_v6.2TNdust_newbeam.clik
-clik_likefile2 = /home/hamann/plonk/clik/data/actspt_2012_11.clik
-clik_likefile3 = /home/hamann/plonk/clik/data/lowlike_v2.0.clik
+clik_likefile1 = /home/hamann/plonk/clik/data/CAMspec_v6.2TN_2013_01_18.clik
+clik_likefile2 = /home/hamann/plonk/clik/data/actspt_2013_01.clik
+clik_likefile3 = /home/hamann/plonk/clik/data/lowlike_v22.clik
 clik_likefile4 = /home/hamann/plonk/clik/data/lensing_likelihood_v1.2.clik_lensing
 
 #Might want to switch on this one when using Planck lensing likelihood
@@ -20,19 +20,14 @@ highL_data_dir = %DATASETDIR%highL/
 lmax_computed_cl = 4500
 
 #this contains most of the standard parameters so can be used with various different runs
-propose_matrix = planck_CAMspec_highL_merged.covmat
+propose_matrix = 
+#planck_CAMspec_highL_merged.covmat
 
 
 DEFAULT(CAMspec_defaults.ini)
 
-#CAMspec nuisance parameters
-#Steven&Antony, updated with Erminia's prior ranges for common CAMspec and ACT/SPT nuisance paramters
-param[acib217]= 60 0 100 5 5
-param[aksz] = 1 0 10 .5 .5
-param[acib143]= 3.4 0 20 0.7 0.7
-param[asz143]= 0.9 0 3 .3 0.3
+
 param[cibr]= 0.95 0.0 1.0 0.04 0.04
-param[xi] = .1 0 1 .1 .1
 
 #ACT/SPT nuisance parameters
 param[a_ps_act_148] = 10 0 30 0.6 0.6
@@ -43,8 +38,8 @@ param[a_ps_spt_220] = 70 0 200 4 4
 param[r_ps_spt_95x150] =  0.75 0 1.0 0.1 0.1
 param[r_ps_spt_95x220] = 0.55 0 1.0 0.1 0.1
 param[r_ps_150x220] = 0.94 0 1.0 0.02 0.02
-param[a_gs] = 0.4 0 3 0.2 0.2
-param[a_ge] = 0.8 0 3 0.2 0.2
+param[a_gs] = 0.4 0 5 0.1 0.1
+param[a_ge] = 0.8 0 5 0.1 0.1
 param[cal_acts_148] = 1.00 0.8 1.3 0.01 0.01
 param[cal_acts_217] = 1.00 0.8 1.3 0.01 0.01
 param[cal_acte_148] = 1.00 0.8 1.3 0.01 0.01
