corrected likelihood path

--- a/Models/m2phi2/CAMspec_defaults.ini
+++ b/Models/m2phi2/CAMspec_defaults.ini
@@ -1,8 +1,9 @@
 #clik likelihood file, when compiling with cliklike
-clik_numdatasets = 2
-clik_likefile1 = /home/hamann/plonk/clik/data/CAMspec_v6.2TN_2013_01_18.clik
-clik_likefile2 = /home/hamann/plonk/clik/data/lowlike_v22.clik
-clik_likefile3 = /home/hamann/plonk/clik/data/lensing_likelihood_v1.2.clik_lensing
+clik_numdatasets = 3
+clik_likefile1 = /home/planck/research/likelihood/Likelihood_6.0/CAMspec_v6.2TN_2013_01_18.clik
+clik_likefile2 = /home/planck/research/likelihood/Likelihood_6.0/lowlike_v22.clik
+clik_likefile3 = /home/planck/research/likelihood/Likelihood_6.0/commander_v3.clik
+clik_likefile4 = /home/hamann/plonk/clik/data/lensing_likelihood_v1.2.clik_lensing
 
 #Might want to switch on this one when using Planck lensing likelihood
 use_lensing_potential = F
