cleaner margestats format; set getdist ranges for base parameters automatically; auto choice of two vs one tail margestats; max_frac_twotail input parameter

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -61,9 +61,10 @@ map_params = F
 #Otherwise use top hat bins
 smoothing = T
 
-num_contours = 2
+num_contours = 3
 contour1 = 0.68
 contour2 = 0.95
+contour3 = 0.99
 
 do_minimal_1d_intervals = F
 
@@ -96,34 +97,9 @@ matlab_colscheme =
 marker[nrun] = 0
 
 #Need to give limits if prior cuts off distribution where not very small
-#limits[tau] = 0.01 N
-#limits[w] = -1 N
-limits[w]=-3 -0.3
-limits[wa] = -2 2
-limits[r]= 0 N
-limits[asz] = 0 2
-limits[r02]= 0 N
-limits[r10]= 0 N
-limits[mnu]= 0 N
-limits[fdm]= 0 N
-limits[deltazrei]=0.5 2.5
-limits[meffsterile]= 0 N
-limits[omeganuh2]= 0 N
+#base parameter limits are set automatically from the ranges file
 limits[H0]=40 100
-
-#camspec
-limits[asz143]=0 10
-limits[acib143]= 0 20
-#limits[acib217]= N 80
-limits[cibr]= 0 1
-limits[xi] = 0 1
-limits[aksz] =  0 10
-limits[psr]= N 1
-#limits[ncib] = 0.5 1
-#highL
-limits[r_ps_spt_95x150]= N 1
-limits[r_ps_150x220]=N 1
-limits[act_dust_s]=0 N
+limits[zrei] = 2 N
 
 #all_limits sets all limitsxx for all variables to the same; can be useful for bins
 all_limits = 
