added smooth_scale_1D; separate get1Ddensity routine more like 2D case

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -66,6 +66,8 @@ contour1 = 0.68
 contour2 = 0.95
 contour3 = 0.99
 
+max_frac_twotail = 0.15
+
 do_minimal_1d_intervals = F
 
 #if we only want 2D plots agains a particular variable
