update getdist defaults

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -15,8 +15,9 @@ exclude_chain =
 
 #width of Gaussian smoothing - Should check plots are robust to changes in 
 #this parameter. Narrow diagonal distributions need larger number
-#Can also check plots by comparing with setting smoothing=F below
 num_bins = 40
+
+smooth_scale_1D =2
 smooth_scale_2D =2
 
 #For disgarding burn-in if using raw chains
