update lensing.ini file

--- a/batch1/lensing.ini
+++ b/batch1/lensing.ini
@@ -1,5 +1,5 @@
 
-clik_data_lensing = %DATASETDIR%clik/lensing_likelihood_v3_ref.clik_lensing
+clik_data_lensing = %DATASETDIR%clik/plenslike_dx9nom_143_217_857m_g30_co_simnfg_simbeam_simlens_mono_pp.dat
 clik_speed_lensing = -1
 
 use_nonlinear_lensing = T
