misc updates - enabled NIS by default, added LCDM

--- a/Models/lcdm/getdist_common_batch1.ini
+++ b/Models/lcdm/getdist_common_batch1.ini
@@ -1,43 +1,41 @@
-#Params for "getdist" - for processing .txt chain information
+
+out_dir = %LOCALDIR%
 
 #if zero, columnnum calculated automatically as total number of columns
 columnnum  = 0
 
-file_root = chains/lcdm
 out_root = 
-out_dir = 
-plot_data_dir = plot_data/
-
-#if parameter_names empty set from file_root.paramnames if it exists
-#otherwise set up labels manually in this file using lab1=... etc.
-parameter_names = Models/lcdm/distparams_modpk.paramnames
-#params_CMB.paramnames
-
+plot_data_dir = %LOCALDIR%plot_data/
 
 #If generated chain at higher temperature can cool for computing results
 cool = 1
 
 #If 0 assume 1 and no chain filename prefixes
-chain_num = 0
+chain_num = 8
 first_chain = 
 exclude_chain = 
 
 #width of Gaussian smoothing - Should check plots are robust to changes in 
 #this parameter. Narrow diagonal distributions need larger number
 #Can also check plots by comparing with setting smoothing=F below
-num_bins = 30
+num_bins = 40
 
 #For disgarding burn-in if using raw chains
 #if < 1 interpreted as a fraction of the total number of rows (0.3 ignores first 30% of lines)
-ignore_rows = 0
+ignore_rows = 0.3
 
 #if T produced B&W printer friendly output
 B&W = F
 #version of MatLab you are using
-matlab_version = 7
+#matlab_version = 7
 
-#To make e.g. 1D plots automatically uncomment this
-#finish_run_command= matlab < %ROOTNAME%.m
+matlab_subplot_size_inch = 4.0
+matlab_subplot_size_inch2 = 4.0
+matlab_subplot_size_inch3 = 6.0
+
+matlab_plot_output = pdf
+
+line_labels = T
 
 #Switches; auto_label labels all parameters by their number
 no_plots = F
@@ -46,11 +44,6 @@ auto_label = F
 #samples_are_chains = F can be useful for other samples when first two columns not present
 samples_are_chains = T
 
-#Include these in 1D plots for comparison - must have same parameters
-compare_num = 0
-compare1 = basic6_cmb
-
-line_labels= F
 
 plot_meanlikes = T
 shade_meanlikes = T
@@ -108,13 +101,28 @@ plotparams = omegabh2 omegadmh2 tau ns
 marker[nrun] = 0
 
 #Need to give limits if prior cuts off distribution where not very small
-limits[tau] = 0.01 N
-limits[w] = -1 N
+#limits[tau] = 0.01 N
+#limits[w] = -1 N
 limits[r]= 0 N
+limits[asz] = 0 2
 limits[r02]= 0 N
 limits[r10]= 0 N
 limits[mnu]= 0 N
-limits[asz] = 0 2
+limits[fdm]= 0 N
+limits[deltazrei]=0.5 2.5
+
+#camspec
+limits[asz143]=0 3
+limits[acib143]= 0 20
+limits[acib217]= N 80
+limits[cibr]= 0 1
+limits[xi] = 0 1
+limits[aksz] =  0 5
+limits[psr]= N 1
+#highL
+limits[r_ps_spt_95x150]= N 1
+limits[r_ps_150x220]=N 1
+
 
 #all_limits sets all limitsxx for all variables to the same; can be useful for bins
 all_limits = 
