--- a/Models/lcdm/multinest_ceff.ini
+++ b/Models/lcdm/multinest_ceff.ini
@@ -6,7 +6,7 @@
 multimodal = F
 
 #run in constant efficiency mode?
-ceff = F
+ceff = T
 
 #max no. of mdoes expected (for memory allocation)
 maxmodes = 10
@@ -18,7 +18,7 @@ nlive = 300
 tol = 0.5
 
 #sampling efficiency
-eff = 0.8
+eff = 0.02
 
 #no. of iterations after which to update on the sampling progress
 updInt = 1000
