getdist limits for derived parameters

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -103,6 +103,10 @@ marker[nrun] = 0
 #base parameter limits are set automatically from the ranges file
 limits[H0]=40 100
 limits[zrei] = 2 N
+limits[r10] = 0 N
+limits[r02] = 0 N
+limits[omeganuh2]=0 N
+limits[omegam]=0 N
 
 #all_limits sets all limitsxx for all variables to the same; can be useful for bins
 all_limits = 
