clik7 updates, default to non-HDF files

--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -1,5 +1,5 @@
 #clik likelihood file, when compiling with cliklike
-clik_data_camspec = %DATASETDIR%clik/CAMspec_v6.2TN_2013_01_18.clik
+clik_data_camspec = %DATASETDIR%clik/CAMspec_v6.2TN_2013_01_18.cldf.clik
 clik_params_camspec = %DATASETDIR%camspec.paramnames
 clik_speed_camspec = 5
 
