--- a/batch1/CAMspec_ACTSPT_defaults.ini
+++ b/batch1/CAMspec_ACTSPT_defaults.ini
@@ -1,5 +1,5 @@
 #clik likelihood file, when compiling with cliklike
-clik_data_actspt = %DATASETDIR%clik/actspt_2013_01.clik
+clik_data_actspt = %DATASETDIR%clik/actspt_2013_01.cldf.clik
 clik_params_actspt = %DATASETDIR%highL.paramnames
 clik_speed_actspt = 6
 
