--- a/batch1/PLik_defaults.ini
+++ b/batch1/PLik_defaults.ini
@@ -1,6 +1,6 @@
 #clik likelihood file
 
-clik_data_plik = %DATASETDIR%clik/plik_dx9_v8N.clik
+clik_data_plik = %DATASETDIR%clik/plik_dx9_v8N.cldf.clik
 clik_params_plik = %DATASETDIR%plik.paramnames
 clik_speed_plik = 5
 
