default bin settings

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -15,9 +15,9 @@ exclude_chain =
 
 #width of Gaussian smoothing - Should check plots are robust to changes in 
 #this parameter. Narrow diagonal distributions need larger number
-num_bins = 40
-
-smooth_scale_1D =2
+num_bins = 80
+num_bins_2D=40
+smooth_scale_1D =3
 smooth_scale_2D =2
 
 #For disgarding burn-in if using raw chains
