--- a/batch1/lowlOverlap.ini
+++ b/batch1/lowlOverlap.ini
@@ -1,5 +1,4 @@
 #clik likelihood file, when compiling with cliklike
 
-clik_data_commander = %DATASETDIR%clik/commander_v4.1_lm49.cldf.clik
+clik_data_commander = %DATASETDIR%clik/commander_v4.2_overlap.clik
 clik_speed_commander = 0
-
