--- a/batch1/CAMspec_lmax1000_defaults.ini
+++ b/batch1/CAMspec_lmax1000_defaults.ini
@@ -4,7 +4,7 @@ clik_params_camspec = %DATASETDIR%camspec.paramnames
 clik_speed_camspec = 5
 
 #these only used if compiling with clicklike_CamSpec
-likefile = %DATASETDIR%camspec/like_v6.2TNdust
+likefile = %DATASETDIR%camspec/like_217lmin1000_v6.2TNdust
 beamfile = %DATASETDIR%camspec/beamfile_v6.2TN.dat
 sz143file = %DATASETDIR%camspec/tsz_143_eps0.50.dat
 tszxcibfile = %DATASETDIR%camspec/sz_x_cib_template.dat
