--- a/batch1/common_batch1.ini
+++ b/batch1/common_batch1.ini
@@ -102,12 +102,13 @@ action = 0
 #estimate a good propose matrix. As a byproduct you also get an approx best fit point
 estimate_propose_matrix = F
 
-dense_minimization_points = T
-
 #when estimating best fit point (action=2 or estimate_propose_matrix), 
 #required relative accuracy of each parameter in units of the propose width
 max_like_radius = 0.002
 max_like_iterations = 40000
+
+minimization_points_factor = 4
+minimize_loglike_tolerance=0.1
 
 #if blank this is set from system clock
 rand_seed = 
