new unified main batch job; changes for final run

--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -32,6 +32,8 @@ param[cal2]= 1 0.95 1.05 0.001 0.001
 param[xi] = 0.1 0 1 .2 .2
 param[aksz] = 1 0 10 .7 0.7
 
+prior[ncib] = 0.7 0.2
+
 param[bm_1_1] = 0.3 -20 20 0.3 0.3
 param[bm_1_2] = 0 -20 20 0.3 0.3
 param[bm_1_3] = 0 -20 20 0.3 0.3
