--- a/batch1/CAMspec_lmax1000_defaults.ini
+++ b/batch1/CAMspec_lmax1000_defaults.ini
@@ -34,6 +34,7 @@ param[aksz] = 1 0 10 .7 0.7
 
 param[bm_1_1] = 0.3 -20 20 0.3 0.3
 
+prior[ncib] = 0.7 0.2
 
 param[bm_1_2] = 0 0 0 0 0
 param[bm_1_3] = 0 0 0 0 0
