--- a/batch1/CAMspec_nonclik.ini
+++ b/batch1/CAMspec_nonclik.ini
@@ -1,5 +1,7 @@
 #these only used if compiling with clicklike_CamSpec
 use_CAMspec=T
+camspec_beam_mcmc_num=1
+
 likefile = %DATASETDIR%camspec/like_v6.2TNdust
 beamfile = %DATASETDIR%camspec/beamfile_v6.2TN.dat
 sz143file = %DATASETDIR%camspec/tsz_143_eps0.50.dat
