update paramnames latex

--- a/test.ini
+++ b/test.ini
@@ -11,6 +11,9 @@ DEFAULT(batch1/lowLike.ini)
 #general settings
 DEFAULT(batch1/common_batch1.ini)
 
+#high for new runs
+MPI_Max_R_ProposeUpdate = 30
+
 propose_matrix= planck_covmats/base_planck_CAMspec_lowl_lowLike.covmat
 
 start_at_bestfit =F
