--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -1,7 +1,7 @@
 #clik likelihood file, when compiling with cliklike
-clik_data_camspec = %DATASETDIR%clik/CAMspec_v6.2TN_2013_02_16_217x217_lmin1000.cldf.clik
-###clik_data_camspec = %DATASETDIR%clik/CAMspec_v6.2TN_2013_01_18.cldf.clik
-clik_params_camspec = %DATASETDIR%camspec.paramnames
+clik_data_camspec = %DATASETDIR%clik/CAMspec_v6.2TN_2013_02_26.clik
+
+clik_params_camspec = %DATASETDIR%camspec_beammarge.paramnames
 clik_speed_camspec = 5
 
 lmax_computed_cl = 2500
