getdist input params

--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -6,7 +6,7 @@ clik_speed_camspec = 5
 
 lmax_computed_cl = 2500
 
-#this contains most of the standard parameters so can be used with various different runs
+#this contains most of the standard parameters so can be used with various different runs (but in practice is often not invertible)
 propose_matrix = planck_CAMspec_merged.covmat
 
 #CAMspec nuisance parameters
