--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -20,6 +20,9 @@ num_bins_2D=40
 smooth_scale_1D =3
 smooth_scale_2D =2
 
+#for 3d plots
+max_scatter_points = 2000
+
 #For disgarding burn-in if using raw chains
 #if < 1 interpreted as a fraction of the total number of rows (0.3 ignores first 30% of lines)
 ignore_rows = 0.3
@@ -83,8 +86,11 @@ plot2 =
 #number of sample plots, colored by third parameter
 #if last parameter is 0 or -1 colored by the parameter most correlated
 #with one of the eigenvector directions (e.g. parallel or orthogonal to degeneracy)
-num_3D_plots = 1
+num_3D_plots = 0
 3D_plot1 = H0 omegam tau
+
+#get samples anyway, e.g, for python plots
+make_scatter_samples=T
 
 #Output 2D plots for param combos with 1D marginalized plots along the diagonal
 triangle_plot = T
