auto-scaling of 1D plot smoothing scale

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -17,7 +17,10 @@ exclude_chain =
 #Should check plots are robust to changes in these parameters. 
 num_bins = 80
 num_bins_2D=40
-smooth_scale_1D =3
+
+smooth_scale_1D =-1
+#if <0 uses automatic smoothing length (changes with parameter)
+
 smooth_scale_2D =2
 
 #for 3d plots
