scale by abs(smooth_scale_1D)

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -19,7 +19,9 @@ num_bins = 80
 num_bins_2D=40
 
 smooth_scale_1D =-1
-#if <0 uses automatic smoothing length (changes with parameter)
+#if > 0 smooth by Gaussian of width smooth_scale_1D bins
+#if < 0 uses automatic smoothing length (changes with parameter)
+#-the overall smoothing length is scaled by abs(smooth_scale_1D) from very crude guess at best overall scale
 
 smooth_scale_2D =2
 
