--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -19,10 +19,11 @@ num_bins = 80
 num_bins_2D=40
 
 smooth_scale_1D =-1
-#if > 0 smooth by Gaussian of width smooth_scale_1D bins
+#if > 0 smooth by Gaussian of smooth_scale_1D standard deviations in each parameter (around 0.2-0.3 is often good)
 #if < 0 uses automatic smoothing length (changes with parameter)
 #-the overall smoothing length is scaled by abs(smooth_scale_1D) from very crude guess at best overall scale
 
+#For 2D this is the smoothing scale relative to the bin size
 smooth_scale_2D =2
 
 #for 3d plots
