added getdist credible_interval_threshold, new defaults

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -15,11 +15,12 @@ exclude_chain =
 
 #Number of output bins for plotting, and relative scale of the Gaussian kernel
 #Should check plots are robust to changes in these parameters. 
-num_bins = 80
+num_bins = 100
 num_bins_2D=40
 
 smooth_scale_1D =0.25
-#if > 0 smooth by Gaussian of smooth_scale_1D standard deviations in each parameter (around 0.2-0.3 is often good)
+#if >= 1 smooth by smooth_scale_1D bin widths
+#if > 0  and <1 smooth by Gaussian of smooth_scale_1D standard deviations in each parameter (around 0.2-0.3 is often good)
 #if < 0 uses automatic smoothing length (changes with parameter)
 #-the overall smoothing length is scaled by abs(smooth_scale_1D) from very crude guess at best overall scale
 
@@ -75,6 +76,11 @@ num_contours = 3
 contour1 = 0.68
 contour2 = 0.95
 contour3 = 0.99
+
+#If the distribution is skewed, so two probability of tails differs by more than credible_interval_threshold
+#of the peak value, use equal-probability limits rather than integrating inwards equally at both tails
+#Note credible interval depend on smoothing
+credible_interval_threshold = 0.05
 
 max_frac_twotail = 0.15
 
