--- a/batch1/PLik_defaults.ini
+++ b/batch1/PLik_defaults.ini
@@ -1,6 +1,6 @@
 #clik likelihood file
 
-clik_data_plik = %DATASETDIR%clik/plik_dx9_v8N.cldf.clik
+clik_data_plik = %DATASETDIR%clik/plik_dx9_v8N.clik
 clik_params_plik = %DATASETDIR%plik.paramnames
 clik_speed_plik = 5
 
@@ -8,21 +8,22 @@ lmax_computed_cl = 2500
 
 
 #this contains most of the standard parameters so can be used with various different runs
-propose_matrix = planck_PLik.covmat
+propose_matrix = test_theta_st_cosmoplanckmass_lowllikePlik_NomV8.covmat
 
 #PLik nuisance parameters
-param[A_cib_143] = 2.8 0 50 1 1
-param[A_cib_217] = 66 0 120 1 1
-param[r_cib] = 0.5 0 1 .1 .1
-param[ps_pwfe_A_100_100] =  180 0 400 5 5
-param[ps_pwfe_A_100_143] =  106 0 400 0 0 
-param[ps_pwfe_A_100_217] =  67 0 400 0 0 
-param[ps_pwfe_A_143_143] = 70 0 400 5 5  
-param[ps_pwfe_A_143_217] = 58 0 400 5 5  
-param[ps_pwfe_A_217_217] = 72 0 400 5 5  
-param[gal_norm] =0.4660089E-4 0 1e-3 6.64819e-07 6.64819e-07
-param[A_sz]= 1 0 40 2 2
-param[xi_sz_cib]=0 0 1 0.5 0.5
-param[ksz_norm]=0 0 50 5 5
-param[cib_index]=-1.3 -5 5 0.5 0.5
+param[acib143] = 2.8 0 50 1 1
+param[acib217] = 66 0 120 1 1
+param[cibr] = 0.5 0 1 .1 .1
+param[aps100] =  180 0 400 5 5
+param[aps100143] =  106 0 400 0 0 
+param[aps100217] =  67 0 400 0 0 
+param[aps143] = 70 0 400 5 5  
+param[aps143217] = 58 0 400 5 5  
+param[aps217] = 72 0 400 5 5  
+param[gal_norm] =0.4660089E-4 0 1e-3 6.64819e-07 6.64819e-07                                                                                                      
+param[asz143]= 1 0 40 2 2
+param[xi]=0 0 1 0.5 0.5
+param[aksz]=0 0 50 5 5
+#param[cib_index]=-1.3 -5 5 0.5 0.5
+param[ncib]=0.7 -5 5 0.2 0.2
 
