--- a/batch1/PLik_CAMspec_defaults.ini
+++ b/batch1/PLik_CAMspec_defaults.ini
@@ -4,7 +4,7 @@ clik_params_plik = %DATASETDIR%plik.paramnames
 clik_speed_plik = 5
 
 #don't include both
-clik_params_camspec =
+clik_data_camspec =
 
 DEFAULT(CAMspec_defaults.ini)
 
