add r02 to plot outputs

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -102,7 +102,7 @@ make_scatter_samples=T
 
 #Output 2D plots for param combos with 1D marginalized plots along the diagonal
 triangle_plot = T
-triangle_params = omegabh2 omegach2 tau omegak mnu nnu yhe Alens ns nrun logA r H0 omegam omegal sigma8
+triangle_params = omegabh2 omegach2 tau omegak mnu nnu yhe Alens ns nrun logA r H0 omegam omegal sigma8 r02
 
 #e.g. colormap('jet')
 matlab_colscheme =
