added some messy additional python scripts I used (not for publci consumption); edits for PLC clik; start updating docs

--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -1,12 +1,13 @@
 #clik likelihood file, when compiling with cliklike
 clik_data_camspec = %DATASETDIR%clik/CAMspec_v6.2TN_2013_02_26.clik
 
-clik_params_camspec = %DATASETDIR%camspec_beammarge.paramnames
+clik_params_camspec = %DATASETDIR%camspec.paramnames
 clik_speed_camspec = 5
 
 lmax_computed_cl = 2500
 
 #this contains most of the standard parameters so can be used with various different runs (but in practice is often not invertible)
+#lots of full covmats are provided in planck_covmats
 propose_matrix = planck_CAMspec_merged.covmat
 
 #CAMspec nuisance parameters
@@ -26,26 +27,8 @@ param[cal2]= 1 0.95 1.05 0.001 0.001
 param[xi] = 0.1 0 1 .2 .2
 param[aksz] = 1 0 10 .7 0.7
 
-prior[ncib] = 0.7 0.2
+#This Gaussian prior is now included in the likelihood
+#prior[ncib] = 0.7 0.2
 
 param[bm_1_1] = 0.3 -20 20 0.3 0.3
-
-param[bm_1_2] = 0 0 0 0 0
-param[bm_1_3] = 0 0 0 0 0
-param[bm_1_4] = 0 0 0 0 0
-param[bm_1_5] = 0 0 0 0 0
-param[bm_2_1] = 0 0 0 0 0
-param[bm_2_2] = 0 0 0 0 0
-param[bm_2_3] = 0 0 0 0 0
-param[bm_2_4] = 0 0 0 0 0
-param[bm_2_5] = 0 0 0 0 0
-param[bm_3_1] = 0 0 0 0 0
-param[bm_3_2] = 0 0 0 0 0
-param[bm_3_3] = 0 0 0 0 0
-param[bm_3_4] = 0 0 0 0 0
-param[bm_3_5] = 0 0 0 0 0
-param[bm_4_1] = 0 0 0 0 0
-param[bm_4_2] = 0 0 0 0 0
-param[bm_4_3] = 0 0 0 0 0
-param[bm_4_4] = 0 0 0 0 0
-param[bm_4_5] = 0 0 0 0 0
+#other beams modes are marginalized analytically internally
