paramnames for clik changes and nonclik consistency

--- a/batch1/nonclik.ini
+++ b/batch1/nonclik.ini
@@ -13,3 +13,7 @@ tszxcibfile = %DATASETDIR%camspec/sz_x_cib_template.dat
 kszfile = %DATASETDIR%camspec/cl_ksz_148_trac.dat
 
 clik_data_camspec =
+
+prior[ncib] = 0.7 0.2
+param[cal1]= 1.0 1.0 1.0 0 0
+
