--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -22,12 +22,11 @@ param[psr]= 0.91 0.0 1.0 0.04 0.04
 param[cibr]= 0.63 0.0 1.0 0.05 0.05
 param[ncib] = 0.6 -2 2 0.05 0.05
 param[cal0]= 1 0.98 1.02  0.0004 0.0004
-param[cal1]= 1.0 1.0 1.0 0 0
 param[cal2]= 1 0.95 1.05 0.001 0.001
 param[xi] = 0.1 0 1 .2 .2
 param[aksz] = 1 0 10 .7 0.7
 
-#This Gaussian prior is now included in the likelihood
+#This Gaussian prior is now included in the likelihood along with priors on the calibrations
 #prior[ncib] = 0.7 0.2
 
 param[bm_1_1] = 0.3 -20 20 0.3 0.3
