--- a/batch1/common_batch1.ini
+++ b/batch1/common_batch1.ini
@@ -42,7 +42,7 @@ num_threads = 0
 #MPI mode multi-chain options (recommended)
 #MPI_Converge_Stop is a (variance of chain means)/(mean of variances) parameter that can be used to stop the chains
 #Set to a negative number not to use this feature. Does not guarantee good accuracy of confidence limits.
-MPI_Converge_Stop = 0.01
+MPI_Converge_Stop = 0.02
 
 
 #Do initial period of slice sampling; may be good idea if 
@@ -51,7 +51,7 @@ MPI_StartSliceSampling  = F
 
 #Can optionally also check for convergence of confidence limits (after MPI_Converge_Stop reached)
 #Can be good idea as small value of MPI_Converge_Stop does not (necessarily) imply good exploration of tails
-MPI_Check_Limit_Converge = T
+MPI_Check_Limit_Converge = F
 
 #if MPI_Check_Limit_Converge = T, give tail fraction to check (checks both tails):
 MPI_Limit_Converge = 0.025
