--- a/batch1/nonclik.ini
+++ b/batch1/nonclik.ini
@@ -17,3 +17,23 @@ clik_data_camspec =
 prior[ncib] = 0.7 0.2
 param[cal1]= 1.0 1.0 1.0 0 0
 
+param[bm_1_2]=0 0 0 0 0
+param[bm_1_3]=0 0 0 0 0
+param[bm_1_4]=0 0 0 0 0
+param[bm_1_5]=0 0 0 0 0
+param[bm_2_1]=0 0 0 0 0
+param[bm_2_2]=0 0 0 0 0
+param[bm_2_3]=0 0 0 0 0
+param[bm_2_4]=0 0 0 0 0
+param[bm_2_5]=0 0 0 0 0
+param[bm_3_1]=0 0 0 0 0
+param[bm_3_2]=0 0 0 0 0
+param[bm_3_3]=0 0 0 0 0
+param[bm_3_4]=0 0 0 0 0
+param[bm_3_5]=0 0 0 0 0
+param[bm_4_1]=0 0 0 0 0
+param[bm_4_2]=0 0 0 0 0
+param[bm_4_3]=0 0 0 0 0
+param[bm_4_4]=0 0 0 0 0
+param[bm_4_5]=0 0 0 0 0
+
