added converge_test_limit getdsit option

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -77,6 +77,9 @@ contour1 = 0.68
 contour2 = 0.95
 contour3 = 0.99
 
+#limit to use for split test and Raftery-Lewis convergence diagonostics
+converge_test_limit=0.95
+
 #If the distribution is skewed, so two probability of tails differs by more than credible_interval_threshold
 #of the peak value, use equal-probability limits rather than integrating inwards equally at both tails
 #Note credible interval depend on smoothing
