py output, bug fixes

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -36,14 +36,18 @@ ignore_rows = 0.3
 
 #if T produced B&W printer friendly output
 B&W = F
+
+#set to py for python
+plot_ext = py
+
 #version of MatLab you are using
 #matlab_version = 7
 
-matlab_subplot_size_inch = 4.0
-matlab_subplot_size_inch2 = 4.0
-matlab_subplot_size_inch3 = 6.0
+subplot_size_inch = 4.0
+subplot_size_inch2 = 4.0
+subplot_size_inch3 = 6.0
 
-matlab_plot_output = pdf
+plot_output = pdf
 
 line_labels = T
 
