--- a/disttest.ini
+++ b/disttest.ini
@@ -3,5 +3,7 @@ DEFAULT(batch1/getdist_common_batch1.ini)
 file_root = chains/test
 ignore_rows=0.3
 
+plot_ext = py
+
 #plot_data_dir is where output plotting files are stored. The directory must exist.
 plot_data_dir=./plot_data
