--- a/distparams.ini
+++ b/distparams.ini
@@ -34,10 +34,12 @@ smooth_scale_2D =2
 #for 3d plots
 max_scatter_points = 2000
 
-
 #if T produced B&W printer friendly output
 B&W = F
-#version of MatLab you are using
+
+plot_ext = py
+
+#version of MatLab you are using if plot_ext=m
 matlab_version = 7
 
 #To make e.g. 1D plots automatically uncomment this
